--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "heatmap.js": "^2.0.5",
     "html2canvas": "^1.4.1",
     "vue": "^3.5.13",
-    "webgazer": "^3.3.0"
+    "webgazer": "^3.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
